--- a/src/Components/ContactProfileCard/ContactUs.css
+++ b/src/Components/ContactProfileCard/ContactUs.css
@@ -24,6 +24,10 @@
     font-family: "Pirulen";
     color: white
 }
+
+.contactHeading{
+    margin-bottom: 0 !important;
+}
 @media screen and (max-width: 768px){
     .contactUsWrapper {
         justify-content: center;
