--- a/src/stylesheets/events.css
+++ b/src/stylesheets/events.css
@@ -56,9 +56,7 @@ img {
   height: max-content;
   align-items: center;
 }
-.card-text{
 
-}
 .heading {
   font-family: "Pirulen";
   font-size: 36px;
@@ -72,7 +70,9 @@ img {
     padding-left: 50px;
     /* margin-top: 5vh; */
     width: 100%;
-    margin: 50px 50px;
+    margin: 60px 50px;
+    margin-bottom: 35px;
+
 }
 
 .card-container {
@@ -303,6 +303,7 @@ img {
     text-align: center;
     padding: 0 5px;
     font-size: 36px;
+    margin-top: 70px;
   }
   .heading {
     font-size: 1.5rem;
